# xux-core

./: .gitignore  README.md  rust-toolchain.toml
easy-fs-fuse/src/: main.rs
os/: .gitignore  Cargo.toml  Makefile  build.rs  code.diff  plan.md
os/.cargo/: config.toml
os/proc-macro/src/: lib.rs
os/scripts/: debug.gdb  gdb_rust.py  parse_backtrace.py  parse_elf.py  template.linker.ld
os/src/: config.rs  console.rs  entry.asm  lang_iterms.rs  link_app.S  linker.ld  linker.ld.template  loader.rs  logging.rs  main.rs  register.rs  sbi.rs  template.linker.ld  timer.rs
os/src/boards/: k210.rs  mod.rs  qemu.rs
os/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
os/src/fs/: inode.rs  mod.rs  stdio.rs  syscall.rs
os/src/interupt/: mod.rs
os/src/io/: console.rs  logging.rs  mod.rs
os/src/mm/: address.rs  buffer.rs  error.rs  frame_allocator.rs  heap_allocator.rs  map_area.rs  memory_set.rs  mod.rs  page_table.rs  user_ptr.rs
os/src/processor/: mod.rs
os/src/sync/: mod.rs  rw.rs  uniprocessor.rs
os/src/sync/blocking/: mod.rs  mutex.rs
os/src/sync/spin/: mod.rs  mutex.rs  pendable_lock.rs  test.rs  ticket.rs
os/src/syscall/: error.rs  fs.rs  mod.rs  process.rs  registry.rs  syscall_num.rs  test.rs
os/src/task/: allocator.rs  context.rs  mod.rs  scheduler.rs  signal.rs  switch.S  switch.rs  syscall.rs  task.rs
os/src/test_framework/: mod.rs
os/src/test_framwork/: mod.rs
os/src/threads/: mod.rs
os/src/timer/: intr_req.rs  mod.rs  syscall.rs
os/src/tools/: backtrace.rs  mod.rs
os/src/trap/: context.rs  mod.rs  trap.S
os_macros/: Cargo.toml
os_macros/src/: lib.rs
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/scripts/: build.sh
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
