[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
sbi-rt = {version = "0.0.2", features = ["legacy"]}

log = "0.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}

riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"

strum = { version = "0.26", default-features = false, features = ["derive"] }
strum_macros = "0.25"

os_macros = { path = "../os_macros" }

lock_api = {version = "0.4.12"}

spin = { version = "0.10.0"}

k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }

easy-fs = { path = "../easy-fs" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }


[features]
sv39 = []
sv48 = []
board_qemu = []
board_k210 = []
test = []
default = ["sv39", "board_qemu"]
